@@ -11,6 +11,9 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
     section numbers.  Notably ignore (with a warning) sections from
     manpages that look suspiciously like a version number.  Thanks
     to Paul Gevers for reporting the bug.  (Closes: #958343)
+  * Dh_Lib.pm: Support that Architecture (among other fields) can be
+    folded in d/control.  Thanks to Thorsten Glaser for reporting
+    the issue.  (Closes: #958987)
 
   [ Translations ]
   * Fix typo in German translation.  (Andreas Bombe)
